@@ -74,6 +74,9 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - macbuild.sh: refactor nxproxy detection to use MACPORTS_PREFIX.
     - macbuild.sh: add EXE_DIR and FRAMEWORKS_DIR internal variables. Create
       directories based on that. Use them when bundling.
+    - macbuild.sh: define PulseAudio libraries and binaries to be later
+      copied. Discover them using MACPORTS_PREFIX. Error out if any component
+      was not found.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
